# opentunnel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  VPNClient_Development (1).provisionprofile  VPNClient_PacketTunnel_Development (1).provisionprofile  docker-compose.rust.yml  docker-compose.yml  install.sh
.github/workflows/: build-clients.yml  server-rust.yml  server.yml
clients/: README.md
clients/android/: build.gradle.kts  gradle.properties  opentunnel.keystore  opentunnel.keystore.base64  settings.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/ios/PacketTunnelExtension/: Info.plist  PacketTunnelExtension.entitlements  PacketTunnelProvider.swift  (+1 more)
clients/macos-cli/: main.swift  opentunnel-cli  simple-test  simple-test.swift  vpn-test
clients/shared/: VPNProtocol.swift
clients/windows/: VPNClient.sln  installer.iss
scripts/: generate-certs.sh
server/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json  tun-bridge.py
server-rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
server-rust/src/: admin.rs  auth.rs  config.rs  db.rs  ippool.rs  logging.rs  main.rs  router.rs  split.rs  state.rs  tls.rs  tun.rs
server-rust/src/protocol/: message.rs  mod.rs  serializer.rs  types.rs
server-rust/src/session/: connection.rs  manager.rs  mod.rs
server/certs/: ca.srl
server/database/: schema.sql
server/public/: index.html
server/scripts/: setup-server.sh
server/src/: index.ts
shared/: protocol-spec.md
(+85 files in other folders)
